--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-.DS_Store
 *.pyc
-*.egg-info
+*.py~
 *.swp
-tags
+__pycache__
 node_modules
-__pycache__/node_modules/
-/__pycache__/
-*.pyc
-*.env
-*.DS_Store
-env/
-sites/
-*.sqlite3
+dist
+*.egg-info
+*.egg
+tags
+.DS_Store
+logs
+site_config.json
+*debug.log
+.vscode
+.idea
+*.code-workspace
